# retirement-sim

./: .dockerignore  .gitignore  Dockerfile  FIDELITY_METHODOLOGY_PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
configs/: example_income_goal.yaml  example_target_amount.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  collapse.ts  format.ts  index.css  palette.ts  storage.ts  theme.ts  types.ts
frontend/src/components/: ConfigList.tsx  LoginScreen.tsx
frontend/src/components/editor/: AccountsForm.tsx  CollapsibleCard.tsx  ContributionsForm.tsx  Fields.tsx  GoalForm.tsx  MarketForm.tsx  PersonForm.tsx  SimulationForm.tsx  SocialSecurityForm.tsx  YamlPreview.tsx
frontend/src/components/results/: FanChart.tsx  Histogram.tsx  ResultsView.tsx  ScenarioChart.tsx
retirement_sim/: __init__.py  __main__.py  allocation.py  auth.py  cli.py  config.py  db.py  defaults.yaml  historical_returns.csv  market.py  report.py  results.py  simulate.py  web.py  withdrawal.py
tests/: conftest.py  test_allocation.py  test_auth.py  test_config.py  test_end_to_end.py  test_market.py  test_plans.py  test_results.py  test_simulate.py  test_social_security.py  test_web.py  test_withdrawal.py
