[project]
name = "interest-calculator"
version = "0.1.0"
description = "Monte Carlo simulator for evaluating retirement account goals"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.50.2",
]

[project.scripts]
retirement-sim = "retirement_sim.cli:main"
retirement-sim-web = "retirement_sim.web:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["retirement_sim"]
